adding about info

--- a/about.html
+++ b/about.html
@@ -4,5 +4,5 @@ layout: default
 
 <div class="about">
 <br>
-You can edit about.html to custom this.
+I am a product and it manager. Living in Berlin, doing the startup thing. I want to read the code. 
 </div>
