bring back my cv

--- a/index.html
+++ b/index.html
@@ -1,80 +1,168 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-
-
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="text/javascript">
-        var D360 = [];
-        var D360Options = {
-            requestPushOnLoad: false,
-            appId: '34',
-            userId: null,
-            apiSecret: '4c553960fdc2a82f90b84f6ef188e836818fcee2c43a6c32bd6c91f41772657f',
-        }
-    </script>
-    <script type="text/javascript" src="https://anreizstruktur.github.io/sdk.js" async></script>
-    <link rel="manifest" href="/manifest.json">
+<title>Nicolas Weinhold - Curriculum Vitae</title>
+
+<meta name="viewport" content="width=device-width"/>
+<meta name="description" content="The Curriculum Vitae of Nicolas Weinhold."/>
+<meta charset="UTF-8">
+
+<link type="text/css" rel="stylesheet" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
+
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
-<body>
-    <p>State: <strong id="state"></strong></p>
-    <p>External User Id: <input id="userId"><input id="userIdSave" type="button" value="Save"/> </p>
-    <input type="button" id="requestPush" value="Request push" />
-    <input type="button" id="removePush" value="Unsubscribe" />
+<body id="top">
+<div id="cv" class="instaFade">
+	<div class="mainDetails">
+		<div id="headshot" class="quickFade">
+			<img src="new_color_big.png" alt="Nicolas Weinhold" />
+		</div>
 
+		<div id="name">
+			<h1 class="quickFade delayTwo">Nicolas Weinhold</h1>
+			<h2 class="quickFade delayThree">Product Manager</h2>
+		</div>
+
+		<div id="contactDetails" class="quickFade delayFour">
+			<ul>
+				<li>e: <a href="mailto:info@nicolasweinhold.de" target="_blank">info@nicolasweinhold.de</a></li>
+			<!--	<li>w: <a href="http://www.nicolasweinhold.de">www.nicolasweinhold.de</a></li> -->
+				<li>m: +49 1578 7263493</li>
+			</ul>
+		</div>
+		<div class="clear"></div>
+	</div>
+
+	<div id="mainArea" class="quickFade delayFive">
+		<section>
+			<article>
+				<div class="sectionTitle">
+					<h1>Personal Profile</h1>
+				</div>
+
+				<div class="sectionContent">
+					<p> After successfully building up a 10+ IT department and working on large consulting projects as a product manager, I want to work on challenging problems within a company with an interesting product, building successful products and teams. I aim to built knowledge about stakeholder requirements, priorities and technology to deliver the best possible solutions</p>
+				</div>
+			</article>
+			<div class="clear"></div>
+		</section>
+		<section>
+			<div class="sectionTitle">
+				<h1>Key Skills</h1>
+			</div>
+
+			<div class="sectionContent">
+				<ul class="keySkills">
+					<li>Analysis</li>
+					<li>Communication</li>
+					<li>Couriosity</li>
+					<li>Agile Methodology</li>
+					<li>Wireframes</li>
+					<li>User Stories</li>
+					<li>Roadmaps</li>
+					<li>Backlog Management</li>
+					<li>Data Flows</li>
+				</ul>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Work Experience</h1>
+			</div>
+
+			<div class="sectionContent">
+				<article>
+					<h2>Head of Product at 360dialog GbmH</h2>
+					<p class="subDetails">Berlin, 02/2017-Present</p>
+					<p>Staffing and developing the product team. Establishing stakeholder communication and a product2engineering process. Owning the product roadmap and the strategic product approach, including adding new communication channels to the marketing automation platform and chatbot development.</p>
+				</article>
+
+				<article>
+					<h2>Senior Product Manager at etventure</h2>
+					<p class="subDetails">Berlin, 11/2016 - 01/2017</p>
+					<p>Workshops for large companies in Agile Developement and story mapping. Coaching product managers and challenging product ideas. Wireframing and specification of fintech applications.</p>
+				</article>
+
+				<article>
+					<h2>CTO at POSpulse</h2>
+					<p class="subDetails">Berlin, 05/2015 - 09/2016</p>
+					<p>Transforming the company from sales to tech driven. Responsible for all IT processes, staffing, budget and product strategy. Shifting development from external agencies to an inhouse IT department and building that up from 0 to 10 people. Introducing SCRUM-process. Rebuilding the applications with a SOA in mind and rolling out services to 6 countries.</p>
+				</article>
+
+				<article>
+					<h2>Technical Product Manager at etventure</h2>
+					<p class="subDetails">Berlin, 01/2014 - 04/2015</p>
+					<p>Taking products form idea to market. Developing product vision and roadmaps for desktop and mobile applications. Product Owner in the Scrum Process. Setting up the application process for a start-up accelerator. Validation of business cases.</p>
+				</article>
+
+				<article>
+					<h2>Product/Business Development Manager at Affinitas GmbH</h2>
+					<p class="subDetails">Berlin, 06/2013 - 12/2013</p>
+					<p>Ownership of the user engagement engine for notifications and updates. Improved filter and matching algorithms and UI. Specifcation of features for web and hybrid mobile applications.</p>
+				</article>
+
+				<article>
+					<h2>Tutor at Freiburg University</h2>
+					<p class="subDetails">Freiburg, 10/2010 - 09/2011</p>
+					<p>Tutor for international Master students in constitutional economics, economic policy and social choice. Prepared Master level seminars for the department. Suggested and collected reading material and content.</p>
+				</article>
+
+				<article>
+					<h2>Project Assistant at Halle Münsterland</h2>
+					<p class="subDetails">Münster, 11/2005 - 02/2006</p>
+					<p>Event organisation for up to 30.000 participants. Event logicstics, security planning, assisting artists and partners.</p>
+				</article>
+
+			</div>
+			<div class="clear"></div>
+		</section>
+
+
+
+
+		<section>
+			<div class="sectionTitle">
+				<h1>Education</h1>
+			</div>
+
+			<div class="sectionContent">
+				<article>
+					<h2>Freiburg University</h2>
+					<p class="subDetails">Master of Science - 2012</p>
+					<p>Economic and Politics Track of the International Master Program</p>
+				</article>
+
+				<article>
+					<h2>Bayreuth University</h2>
+					<p class="subDetails">Bachelor of Arts - 2007</p>
+					<p>Philosophy & Economics</p>
+				</article>
+
+				<article>
+					<h2>Gymnasium Altlünen - 2002</h2>
+					<p class="subDetails">Abitur</p>
+					<p>Bilingual branch</p>
+				</article>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+	</div>
+</div>
 <script type="text/javascript">
-    document.getElementById('userId').value =window.localStorage.getItem('userId');
-    document.getElementById('userIdSave').onclick = function() {
-        window.localStorage.setItem('userId', document.getElementById('userId').value);
-        D360.push('updateExternalData', {userId: document.getElementById('userId').value});
-    };
-
-
-    var status = 'offline';
-    function updateStatus(in_status, bodyClass) {
-        status = in_status;
-        document.getElementById('state').innerHTML = status;
-        var classes = document.body.className = bodyClass;
-    }
-    function getWebPushStatus() {
-        if(!window.D360PushState) {return ;}
-        if(!window.D360PushState.getActiveSubscription()) {
-            return updateStatus('supported, not subscribed', 'supported');
-        }
-        if(D360PushState.getActiveSubscription()) {
-            return updateStatus('active subscription', 'subscribed');
-        }
-    }
-
-    document.addEventListener("DOMContentLoaded", function() {
-        document.getElementById('requestPush').onclick = function() {
-            D360.push(["requestPushNotification"]);
-            getWebPushStatus();
-        };
-        document.getElementById('removePush').onclick = function() {
-            D360.push(["unregister"]);
-        };
-    });
-    setInterval(function() {
-        getWebPushStatus()
-    },1000);
-    getWebPushStatus();
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
-<style type="text/css">
-    #requestPush, #removePush {
-        display: none;
-    }
-
-    .supported #requestPush {
-        display: block;
-    }
-    .subscribed #removePush {
-        display: block;
-    }
-</style>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3753241-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
 </body>
 </html>
