correct typo in education

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<ul>
 				<li>e: <a href="mailto:info@nicolasweinhold.de" target="_blank">info@nicolasweinhold.de</a></li>
 			<!--	<li>w: <a href="http://www.nicolasweinhold.de">www.nicolasweinhold.de</a></li> -->
-				
+
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -135,7 +135,7 @@
 				<article>
 					<h2>Freiburg University</h2>
 					<p class="subDetails">Master of Science - 2012</p>
-					<p>Economic and Politics Track of the International Master Program</p>
+					<p>Economics and Politics Track of the International Master Program</p>
 				</article>
 
 				<article>
