--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 			<div class="sectionContent">
 				<article>
-					<h2>Head of Product at 360dialog GbmH</h2>
+					<h2>Head of Product at 360dialog GmbH</h2>
 					<p class="subDetails">Berlin, 02/2017-Present</p>
 					<p>Staffing and developing the product team. Establishing stakeholder communication and a product2engineering process. Owning the product roadmap and the strategic product approach, including adding new communication channels to the marketing automation platform and chatbot development.</p>
 				</article>
